# temp_project

./: CMakeLists.txt  main.cpp
src/: Piece.cpp  Piece.h  board.cpp  board.h  board_representation.cpp  board_representation.h  game_manager.cpp  game_manager.h  piece_list.cpp  piece_list.h
src/resources/: Colors.cpp  Colors.h
src/ui/: board_ui.cpp  board_ui.h  piece_ui.cpp  piece_ui.h
src/utils/: bitboard_util.cpp  bitboard_util.h  fen_util.cpp  fen_util.h  move.h  move_generator.cpp  move_generator.h  position_info.h  precomputed_move_data.cpp  precomputed_move_data.h
